--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,14 +2,17 @@
 
 * {
 	font-family: 'Rokkitt', serif;
+
 }
 body {
+
 	background: url('../images/wood.jpg') no-repeat;
-	background-size: 100%
+	background-size: 100%;
 }
 
 #main {
 	margin-top: 8em;
+	margin-bottom: 8em;
 }
 
 .navbar-brand {
@@ -27,9 +30,37 @@ body {
 
 .card, .card-header {
 	border-color: #563f46;
+	text-align: center;
 }
 
 p {
 	font-size: 1.2em;
 	margin-top: 4%;
+}
+
+.footer {
+	position: fixed;
+    bottom: 0;
+    background-color: #8ca3a3;
+    width: 100%;
+    height: 3em;
+}
+
+.footer p {
+	margin: 0px auto;
+    text-align: center;
+    padding: .5em;
+}
+
+
+a p {
+	background-color: rgba(86,63,70, 0.89);
+	height: 10%;
+	color: white;
+	font-size:23px;
+	margin-top: 0;
+}
+
+.profile-pic {
+	padding: 2%;
 }
