--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,11 @@
 
 }
 
+body {
+	background: url(../images/wood.jpg) repeat-y;
+    background-size: 100%;
+}
+
 #main {
 	margin-top: 8em;
 	margin-bottom: 8em;
